<resources>
    <string name="app_name">筹么</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="main_title">筹么</string>

    <string name="my_sponsor">我的发起</string>
    <string name="my_join">我的参与</string>
    <string name="my_wealth">我的财富</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_message">我的消息</string>
    <string name="account_option">系统设置</string>
    <string name="my_logout">登出账户</string>


    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="p2refresh_end_no_data">没有更多数据</string>
    <string name="title_activity_cert_apply">CertApplyActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_change_nick">ChangeNick</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_change_pwd">ChangePwdActivity</string>
    <string name="title_activity_change_sex">ChangeSexActivity</string>
    <string name="title_activity_address_manager">AddressManagerActivity</string>
    <string name="title_activity_address_detail">AddressDetailActivity</string>
    <string name="title_activity_exchange_cb">ExchangeCBActivity</string>
    <string name="title_activity_confirm">ConfirmActivity</string>
</resources>
